--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     <footer>
       <p class="text-center">
-        Copyright &copy; <a href="https://www.github.com/fisinik">fisinik</a>
+        Developed by <a href="https://www.github.com/fisinik">fisinik</a>
       </p>
     </footer>
     <script src="script.js"></script>
