--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           class="logo"
           src="https://cdn-icons-png.flaticon.com/512/56/56992.png"
         />
-        <h1></h1>
+        <h1>News Feed</h1>
       </div>
       <div>
         <svg
